[metadata]
name = gnsmql
version = 0.0.4
author = Simon Renggli
author_email = Simon_Renggli1@sluz.ch
description = Database for sleepy people.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SimonRenggli1/GNSMQL
project_urls =
    Bug Tracker = https://github.com/SimonRenggli1/GNSMQL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src